--- a/.github/workflows/foo.yaml
+++ b/.github/workflows/foo.yaml
@@ -5,6 +5,9 @@ jobs:
   foo:
     runs-on: [self-hosted, data-platform, ubuntu, ARM64, 4cpu16ram]
     steps:
+      - run: echo "$GITHUB_OUTPUT"
+      - run: echo 'foo bar'
+      - run: echo "::notice title=Hello::foobar runner's spot instance was evicted by Azure for capacity. Re-trigger this job"
       - run: sleep 3600
       - name: Log notice if cancelled for spot instance eviction
         if: ${{ always() }}
