--- a/.github/workflows/foo.yaml
+++ b/.github/workflows/foo.yaml
@@ -8,7 +8,9 @@ jobs:
       - run: echo "$GITHUB_OUTPUT"
       - run: echo 'foo bar'
       - run: echo "::notice title=Hello::foobar runner's spot instance was evicted by Azure for capacity. Re-trigger this job"
-      - run: sleep 3600
+      - run: |
+          trap '' SIGINT
+          sleep 3600
       - name: Log notice if cancelled for spot instance eviction
         if: ${{ always() }}
         run: |
