--- a/.github/workflows/foo.yaml
+++ b/.github/workflows/foo.yaml
@@ -9,7 +9,7 @@ jobs:
       - run: echo 'foo bar'
       - run: echo "::notice title=Hello::foobar runner's spot instance was evicted by Azure for capacity. Re-trigger this job"
       - run: |
-          trap '' SIGINT
+          trap '' SIGINT SIGTERM
           sleep 3600
       - name: Log notice if cancelled for spot instance eviction
         if: ${{ always() }}
