--- a/.github/workflows/foo.yaml
+++ b/.github/workflows/foo.yaml
@@ -5,6 +5,4 @@ jobs:
   foo:
     runs-on: [self-hosted, data-platform, ubuntu, ARM64, 4cpu16ram]
     steps:
-      - uses: actions/checkout@v4
-        with:
-          repository: torvalds/linux
+      - run: sleep 3600
