--- a/.github/workflows/foo.yaml
+++ b/.github/workflows/foo.yaml
@@ -3,6 +3,11 @@ on:
 
 jobs:
   foo:
+    strategy:
+      fail-fast: false
+      matrix:
+        foo: [1,2,3,4,5]
+        bar: [1,2,3,4]
     runs-on: [self-hosted, data-platform, ubuntu, ARM64, 4cpu16ram]
     steps:
-      - run: sleep 21600
+      - run: sleep 10800
